# netauto

./: .gitignore  README.md  networkAbstraction.py  pyproject.toml
src/netauto/: autofindConf.py  findVendor.py  network.py  vendors.json
src/netauto/filters/: mikrotik.py
src/netauto/helpers/: files.py
