[project]
name = 'netauto_eirikrgr'
version = '0.0.1'
authors = [{name="eirikrgr", email="erickgraterolbarico@gmail.com"},]
description = "Small package to transform all output of devices SSH in a structure readable"
requires-python = ">=3.9"
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3",]


[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"